naked-curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-curl
  labels:
    app: ubuntu-curl
spec:
  containers:
  - name: ubuntu
    image: ubuntu:20.04
    command: ["/bin/bash", "-c", "--"]
    args: ["while true; do sleep 30; done;"]
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
